<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:background="#111"
    tools:ignore="PrivateResource"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/alarm_details_time_picker" />

                <androidx.appcompat.widget.SwitchCompat

        android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/divider1"
            android:checked="true"
            android:text="@string/details_sunday" />

        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_monday"
            android:layout_below="@+id/alarm_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />

        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_tuesday"
            android:layout_below="@+id/alarm_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_wednesday"
            android:layout_below="@+id/alarm_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_thursday"
            android:layout_below="@+id/alarm_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/alarm_details_repeat_friday"
            android:layout_below="@+id/alarm_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/alarm_details_repeat_saturday" />

        <LinearLayout
            android:id="@+id/view_bt1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bkg_bt"
                android:text="@string/add"
                android:textColor="@color/design_default_color_on_secondary"
                android:textAlignment="center"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/design_default_color_on_secondary"
                android:textAlignment="center"
                android:background="@drawable/bkg_bt"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>