<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:background="@drawable/background_sheet">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginLeft="50dp"
            android:textSize="22dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <!-- The question mark (?) means it's a reference to a resource value in the currently applied theme -->
    <TextView
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="22sp"
        android:textColor="@color/blue_grey_500"
        android:drawableLeft="@drawable/ic_map_editing"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="22sp"
        android:textColor="@color/blue_grey_500"
        android:drawableLeft="@drawable/ic_delete_bin"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>