<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".location.fragments.LocationDetailFragment">

    <RelativeLayout
        android:id="@+id/v_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:theme="@style/Switch"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/tvtt"
            android:text="@string/turning_on"
            android:textColor="#BA68C8"
            android:textSize="16sp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tvtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Trạng thái: "
            android:textColor="#BA68C8"
            android:textSize="16sp"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/v_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_status"
        android:layout_marginTop="22dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_location_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/update_current_location"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:backgroundTint="@color/red_400"
            android:layout_below="@id/tv_lnglat"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/ic_near_me"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_near_me"
            tools:ignore="VectorDrawableCompat"
            android:layout_toEndOf="@id/iv_subject"/>


        <ImageView
            android:id="@+id/iv_subject"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bkg_ic_rounded_rect"
            app:srcCompat="@drawable/ic_marker"
            tools:ignore="VectorDrawableCompat"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/cyan_300"
            android:maxLines="2"
            android:layout_toEndOf="@id/ic_near_me"/>

        <TextView
            android:id="@+id/tv_lnglat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/cyan_300"
            android:layout_below="@id/tv_address"
            android:layout_toEndOf="@id/iv_subject"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_location"
        android:layout_marginTop="22dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Spinner
            android:id="@+id/sp_label"
            android:layout_width="200dp"
            android:minWidth="120dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:entries="@array/location_label"
            android:ems="10"
            android:popupBackground="@color/white"
            android:backgroundTint="@color/grey_600" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:minWidth="120dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/sp_label"
            android:textColor="@color/grey_400"
            android:backgroundTint="@color/grey_400"/>

        <EditText
            android:id="@+id/et_radius"
            android:layout_width="200dp"
            android:minWidth="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/et_name"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_400"
            android:backgroundTint="@color/grey_400"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_expiration"
            android:layout_width="200dp"
            android:minWidth="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/et_radius"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_400"
            android:backgroundTint="@color/grey_400"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label"
            android:layout_marginTop="26dp"
            android:text="Tên địa điểm"
            android:textColor="@color/pink"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_below="@id/tv_name"
            android:text="Bán kính khu vực (mét)"
            android:maxLines="2"
            android:textColor="@color/pink"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Nhãn địa điểm"
            android:textColor="@color/pink"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_below="@id/tv_radius"
            android:text="Thời gian kết thúc (giờ)"
            android:maxLines="2"
            android:textColor="@color/pink"
            android:textSize="16sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/btn_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bkg_bt"
            android:text="@string/add"
            android:textColor="@color/design_default_color_on_secondary"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/design_default_color_on_secondary"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>